--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: change tag
+      - name: ls -R
+        run: ls -R
+
+      - name: bump version
         uses: matanshk/helm-chart-version-bumper@main
         with:
           mode: patch
